# quantum-llama

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  coverage.xml  current-coverage.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.cursor/rules/: coding-rules.mdc  monday-board  monday-board.mdc
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
api/: main.py
crawler/: __init__.py  ast_py.py  ast_ts.ts  baseline.py  clone.py  query_snapshots.py  snapshot_db.py
db/: alembic.ini  config.py  connection.py  models.py  repository.py  session.py
db/migrations/: env.py  script.py.mako
db/migrations/versions/: 20250430_initial.py
docs/: board.md  prd.md  project-plan.md
engine/: __init__.py  commit.py  git_ops.py  patch.py
examples/: ast_py_example.py  ast_ts_example.sh  baseline_example.py  clone_example.py  sample.ts
llm/: schema.py
models/: __init__.py  plan_item.py  run.py  target_repo.py
planner/: __init__.py  engine.py  scoring.py
prompts/: add_tests.j2  refactor.j2  upgrade_runtime.j2
tests/: test_basic.py  test_commit.py  test_git_ops.py  test_patch.py  test_planner_engine.py  test_planner_scoring.py
tests/api/: conftest.py  test_main.py
tests/crawler/: __init__.py  test_ast_py.py  test_baseline.py  test_clone.py  test_snapshot_db.py
tests/models/: __init__.py  test_target_repo.py
tests/verification/: test_coverage_check.py  test_parser.py  test_policy.py
verification/: __init__.py  coverage_check.py  parser.py  policy.py
