[tool.poetry]
name = "quantum-llama"
version = "0.1.0"
description = "LLM-powered code operations assistant"
authors = ["Quantum Llama Team"]
readme = "README.md"
packages = [
    { include = "crawler" },
    { include = "planner" },
    { include = "engine" },
    { include = "verification" },
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6"
fastapi = "^0.110.0"
anyio = "^4.3.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
aiosqlite = "^0.20.0"
pygit2 = "^1.14.1"
tenacity = "^8.2.3"
libcst = "^1.2.0"
jinja2 = "^3.1.3"
openai = "^1.14.0"
click = "^8.1.7"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ruff = "^0.3.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.5"
commitizen = "^3.18.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["ALL"]
ignore = ["D203", "D212"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=. --cov-report=term-missing --cov-report=xml -v" 